tests/failing/test_computed_property.js
let arr = [10, 20, 30];
console.log("First element: " + arr[0]);
arr[1] = 50;
console.log("Second element: " + arr[1]);
